Update config settings and dependencies to be able to compile in jdk 11